--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bower": "~1.2.7"
   },
   "devDependencies": {
+    "jasmine-node": "~1.11.0",
+    "karma": "~0.10.2",
     "karma-script-launcher": "~0.1.0",
     "karma-firefox-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.0",
@@ -18,11 +20,32 @@
     "karma-requirejs": "~0.1.0",
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
-    "karma": "~0.10.2",
-    "jasmine-node": "~1.11.0",
     "karma-coverage": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
-    "karma-junit-reporter": "~0.1.0"
+    "karma-junit-reporter": "~0.1.0",
+    "grunt": "~0.4.1",
+    "grunt-gh-pages": "~0.8.0",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-coffee": "~0.6.4",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-compass": "~0.1.3",
+    "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-cssmin": "~0.5.0",
+    "grunt-contrib-connect": "~0.2.0",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-htmlmin": "~0.1.1",
+    "grunt-contrib-imagemin": "~0.1.2",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-bower-requirejs": "~0.4.1",
+    "grunt-usemin": "~0.1.10",
+    "grunt-regarde": "~0.1.1",
+    "grunt-rev": "~0.1.0",
+    "grunt-karma": "~0.3.0",
+    "grunt-open": "~0.2.0",
+    "grunt-google-cdn": "~0.1.1",
+    "grunt-ngmin": "~0.0.2",
+    "matchdep": "~0.1.1"
   },
   "scripts": {
     "start": "open http://localhost:8000; ./scripts/web-server.js",
