--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "bugs": {
     "url": "https://github.com/adamburmister/screwgyms-firebase-angularjs/issues"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "grunt": "~0.4.1",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
@@ -35,6 +34,9 @@
     "grunt-coffeelint": "0.0.6",
     "grunt-conventional-changelog": "~0.1.1",
     "grunt-bump": "0.0.6",
-    "grunt-gh-pages": "~0.8.0"
+    "grunt-gh-pages": "~0.8.0",
+    "grunt-contrib-compass": "~0.6.0"
+  },
+  "devDependencies": {
   }
 }
